{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 20,
  "lineage": "1d360c1f-b3cd-ed67-47ca-d17a806148fa",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "canadacentral",
            "name": "nsg1",
            "resource_group_name": "terraRg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allowtraffic",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg1",
            "resource_group_name": "terraRg",
            "subscription_id": "804713df-4f23-407e-b4c4-483ea265aee2"
          },
          "dependencies": [
            "azurerm_resource_group.rgblock"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/Allowtraffic",
            "name": "Allowtraffic",
            "network_security_group_name": "nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraRg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allowtraffic",
            "network_security_group_name": "nsg1",
            "resource_group_name": "terraRg",
            "subscription_id": "804713df-4f23-407e-b4c4-483ea265aee2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rgblock"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetblock",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.77.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/pzi-sbu-subnet-001",
            "name": "pzi-sbu-subnet-001",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terraRg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pzi-sbu-subnet-001",
            "resource_group_name": "terraRg",
            "subscription_id": "804713df-4f23-407e-b4c4-483ea265aee2",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rgblock",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/pzi-sbu-subnet-001",
            "network_security_group_id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "subnet_id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/pzi-sbu-subnet-001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rgblock",
            "azurerm_subnet.subnetblock",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.77.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "53ec2ddc-53b9-4f8b-a965-9917960cab42",
            "id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "canadacentral",
            "name": "vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "terraRg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.77.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/pzi-sbu-subnet-001",
                "name": "pzi-sbu-subnet-001",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/804713df-4f23-407e-b4c4-483ea265aee2/resourceGroups/terraRg/providers/Microsoft.Network/networkSecurityGroups/nsg1",
                "service_endpoints": [
                  "Microsoft.Storage"
                ]
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet",
            "resource_group_name": "terraRg",
            "subscription_id": "804713df-4f23-407e-b4c4-483ea265aee2"
          },
          "dependencies": [
            "azurerm_resource_group.rgblock"
          ]
        }
      ]
    }
  ]
}